--- a/login.html
+++ b/login.html
@@ -80,7 +80,7 @@ server.listen(443, () => {
 });
 
         // Validação simples de exemplo
-        if (username === "usuario" && password === "1234") {
+        if (username === "admin" && password === "1234") {
             // Redireciona para a página "home.html"
             window.location.href = "home.html";
         } else {
