--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
        const https = require('https');
         
         // Validação simples de exemplo
-        if (username === "admin" && password === "1234") {
+        if (username === "usuario" && password === "1234") {
             // Redireciona para a página "home.html"
             window.location.href = "home.html";
         } else {
