--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
         const password = document.getElementById('password').value;
 
         // Validação simples de exemplo
-        if (username === "usuario" && password === "1234") {
+        if (username === "usuario" && password === "1234" || username === "Usuário" && password === "1234") {
             // Redireciona para a página "home.html"
             window.location.href = "home.html";
         } else {
