--- a/home.html
+++ b/home.html
@@ -93,6 +93,10 @@ footer {
             background-color: #e6f7ff;
             transform: scale(1.02); /* Efeito de zoom ao passar o mouse */
         }
+nav a:hover {
+    color: blue;
+    text-decoration: underline;
+}
 </style>
 <body>
     <header>
