--- a/eventos.html
+++ b/eventos.html
@@ -14,7 +14,7 @@
     background-color: #f4f4f4;
 }
 header {
-    background-color: #4CAF50;
+    background-color:hwb(0 86% 14%);
     color: white;
     padding: 10px 0;
     text-align: center;
@@ -37,7 +37,7 @@ nav a {
     font-weight: bold;
 }
 .banner {
-    background-color: violet;
+    background-color:skyblue;
     color: white;
     text-align: center;
     padding: 50px 20px;
@@ -69,10 +69,20 @@ footer {
     padding: 10px 0;
     margin-top: 20px;
 }
+.events{
+    margin: 20px;
+    text-align: center;
+}
+img{
+    width: 700px;height: 400px;
+}
+nav a:hover {
+    color: blue;
+    text-decoration: underline;
+}
 </style>
 <body>
     <header>
-        <img src="logo.png" alt="Logo do Grêmio">
         <h1>Grêmio Estudantil</h1>
     </header>
     <nav>
@@ -86,8 +96,19 @@ footer {
     <div class="banner">
         <h1>Eventos</h1>
         <p>Fique atento aos eventos da sua escola!</p>
+    </div><br></br>
+    <div class="events">
+        <img src="img/gincana.jpeg" alt="Imagem">
+       <h1>1. Gincana</h1>
+       <img src="img/project.jfif" alt="Imagem">
+       <h1>2. Interclasses</h1>
+       <img src="img/project.jfif" alt="Imagem">
+       <h1>3.</h1>
+       <img src="img/project.jfif" alt="Imagem">
+       <h1>4. </h1>
+       <img src="img/project.jfif" alt="Imagem">
+       <h1>5. </h1>
     </div>
-    
     <footer>
         <p>&copy; 2024 Grêmio Estudantil - Todos os direitos reservados.</p>
     </footer>
