--- a/projetos.html
+++ b/projetos.html
@@ -15,7 +15,7 @@
     background-color: #f4f4f4;
 }
 header {
-    background-color: #4CAF50;
+    background-color: hwb(0 86% 14%);
     color: white;
     padding: 10px 0;
     text-align: center;
@@ -45,7 +45,7 @@ nav a::after{
     position: relative;
 }
 .banner {
-    background-color: red;
+    background-color: skyblue;
     color: white;
     text-align: center;
     padding: 50px 20px;
@@ -80,17 +80,19 @@ footer {
 .center{
     text-align: center;
 }
-body img{
-    max-width: 50px;
+.projetos{
     text-align: center;
-    vertical-align: middle;
-    padding: 10px 0;
+}
+img{
+    width: 550px;height: 400px;
+}
+nav a:hover {
+    color: blue;
+    text-decoration: underline;
 }
 </style>
 <body>
     <header>
-        <img src="img/barra.png" alt="barra de pesquisa">
-        <img src="logo.png" alt="Logo do Grêmio">
         <h1>Grêmio Estudantil</h1>
     </header>
     <nav>
@@ -105,27 +107,32 @@ body img{
         <h1>Projetos</h1>
         <p>Descubra os projetos que serão realizados na sua escola!</p>
     </div>
-    <img src="img/project.jfif" alt="Imagem">
-    <h1 class="center">lorem ipsum</h1>
+    <div class="projetos"><br></br>
+    <img src="img/arrecadacao.jfif" alt="Imagem">
+    <h1 class="center">Campanhas de Arrecadação:</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero molestias eveniet eaque alias vero minus et facere sapiente, ad quae laboriosam, doloremque unde voluptatum provident quam ducimus? Ex, nam sint.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque inventore, sed magni velit nulla odit laudantium aspernatur doloremque ab! Quibusdam commodi odit cumque amet quisquam vero totam ratione explicabo blanditiis.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga amet eius, error magnam quos eligendi? Quia eligendi eaque, impedit cupiditate neque molestias repellendus autem labore? Dolore rerum provident voluptates amet
-        officiis culpa excepturi pariatur accusantium, quos repudiandae nemo laborum numquam incidunt corporis vero corrupti tempore, reiciendis cum unde consequatur. Minima sapiente aliquam, corporis reiciendis facere quod voluptas
-        possimus, consequatur saepe molestias quis praesentium. Laborum magni nihil ratione asperiores vel nobis, sint doloremque, eaque amet assumenda ipsum culpa voluptas tempora molestiae cumque dolorum accusamus unde! Incidunt 
-        distinctio quaerat sit dolore quo deleniti temporibus! Consectetur aliquam asperiores similique commodi dolor iure voluptas!
+        Roupas, brinquedos, entre outros.
+    </p><br></br>
+    <img src="img/project.jfif" alt="Imagem">
+    <h1 class="center">Manifestações Culturais</h1>
+    <p>
+        Peças de teatro e teatro de fantoches.
     </p>
     <img src="img/project.jfif" alt="Imagem">
-    <h1 class="center">lorem ipsum dolor</h1>
+    <h1 class="center">Interclasse</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero molestias eveniet eaque alias vero minus et facere sapiente, ad quae laboriosam, doloremque unde voluptatum provident quam ducimus? Ex, nam sint.
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque inventore, sed magni velit nulla odit laudantium aspernatur doloremque ab! Quibusdam commodi odit cumque amet quisquam vero totam ratione explicabo blanditiis.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga amet eius, error magnam quos eligendi? Quia eligendi eaque, impedit cupiditate neque molestias repellendus autem labore? Dolore rerum provident voluptates amet
-        officiis culpa excepturi pariatur accusantium, quos repudiandae nemo laborum numquam incidunt corporis vero corrupti tempore, reiciendis cum unde consequatur. Minima sapiente aliquam, corporis reiciendis facere quod voluptas
-        possimus, consequatur saepe molestias quis praesentium. Laborum magni nihil ratione asperiores vel nobis, sint doloremque, eaque amet assumenda ipsum culpa voluptas tempora molestiae cumque dolorum accusamus unde! Incidunt 
-        distinctio quaerat sit dolore quo deleniti temporibus! Consectetur aliquam asperiores similique commodi dolor iure voluptas!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quasi dolores pariatur corrupti minima repellat, iusto nulla molestias dolor modi reprehenderit cupiditate natus quos atque? Quae molestias voluptas excepturi similique.
-    </p>
+        Interclasse duas vezes ao ano com atividades esportivas de vôlei e futboll
+    </p><br></br>
+    <video controls width="640" height="360" poster="imagem-poster.jpg">
+        <source src="img/WhatsApp Video 2024-11-26 at 8.34.46 PM.mp4" type="video/mp4">
+        <source src="video.webm" type="video/webm">
+        Seu navegador não suporta a reprodução de vídeo.
+    </video><br></br>
+    <h1 class="center">Café Literário</h1>
+    <img src="img/cafe.jpeg" alt="Imagem">
+    <h1 class="center">Dia da Conciência Negra</h1>
+    <img src="img/conciencianegra3.jpeg" alt="Imagem">
+    </div>
     <footer>
         <p>&copy; 2024 Grêmio Estudantil - Todos os direitos reservados.</p>
     </footer>
