--- a/forum.html
+++ b/forum.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grêmio Estudantil</title>
     <link rel="stylesheet" href="css/EstiloForum.css">
+    <link rel="stylesheet" href="css/EstiloHome.css">
 </head>
 <style>
-    body {
+body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
 }
 header {
-    background-color: #4CAF50;
+    background-color: hwb(0 86% 14%);
     color: white;
     padding: 10px 0;
     text-align: center;
@@ -37,7 +38,7 @@ nav a {
     font-weight: bold;
 }
 .banner {
-    background-color: #2E8B57;
+    background-color: skyblue;
     color: white;
     text-align: center;
     padding: 50px 20px;
@@ -67,7 +68,7 @@ footer {
     color: white;
     text-align: center;
     padding: 10px 0;
-    margin-top: 20px;
+    margin-top: 0px;
 
 }
 .container {
@@ -109,10 +110,62 @@ body {
 .comments-section {
     margin-top: 20px;
 }
+.forum{
+    margin: 20px;
+}
+
+nav a:hover {
+    color: blue;
+    text-decoration: underline;
+}
+nav a.active {
+    border-bottom: 2px solid #ffd700;
+}
+
+input, textarea, button {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #004080;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #003060;
+}
+
+.comment {
+    background-color: #f9f9f9;
+    padding: 15px;
+    margin: 10px 0;
+    border-left: 5px solid #004080;
+
+    @media (max-width: 768px) {
+    .section {
+        width: 100%;
+    }
+
+    nav {
+        flex-wrap: wrap;
+    }
+
+    nav a {
+        margin: 5px 0;
+    }
+}
+
+}
+
 </style>
 <body>
     <header>
-        <img src="logo.png" alt="Logo do Grêmio">
         <h1>Grêmio Estudantil</h1>
     </header>
     <nav>
@@ -127,18 +180,48 @@ body {
         <h1>Forum</h1>
         <p>Debata temas relacionadas ao Gremio com outros usuarios</p>
     </div>
-    <h1>Fórum de Discussão</h1>
-    <div>
+    
+    <div class="forum">
+        <h1>Fórum de Discussão</h1>
         <input type="text" id="username" placeholder="Seu nome" required>
         <textarea id="comment" placeholder="Digite seu comentário" required></textarea>
         <button onclick="addComment()">Adicionar Comentário</button>
     </div>
 
-    <div class="comments-section" id="comments-section">
+    <div class="comments-section forum" id="comments-section">
         <h2>Comentários</h2>
+        <span class="likes">0</span> <button onclick="likeComment(this)">Curtir</button>
     </div>
 
     <script>
+         function addComment() {
+    const username = document.getElementById('username').value;
+    const commentText = document.getElementById('comment').value;
+    const commentsSection = document.getElementById('comments-section');
+
+    if (username && commentText) {
+        const currentDateTime = new Date().toLocaleString();
+        const commentDiv = document.createElement('div');
+        commentDiv.className = 'comment';
+        commentDiv.innerHTML = `<strong>${username}</strong> (${currentDateTime}): ${commentText}`;
+        commentsSection.appendChild(commentDiv);
+
+        document.getElementById('username').value = '';
+        document.getElementById('comment').value = '';
+    } else {
+        alert('Por favor, preencha seu nome e comentário.');
+    }
+}
+
+commentsSection.insertBefore(commentDiv, commentsSection.firstChild);
+
+function likeComment(button) {
+    const likes = button.previousElementSibling;
+    likes.textContent = parseInt(likes.textContent) + 1;
+}
+
+
+    
         function addComment() {
             const username = document.getElementById('username').value;
             const commentText = document.getElementById('comment').value;
