--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
     background-color: #f4f4f4;
 }
 header {
-    background-color: #4CAF50;
+    background-color: hwb(0 86% 14%);
     color: white;
     padding: 10px 0;
     text-align: center;
@@ -44,7 +44,7 @@ nav a::after{
     position: relative;
 }
 .banner {
-    background-color: red;
+    background-color: skyblue;
     color: white;
     text-align: center;
     padding: 50px 20px;
@@ -76,10 +76,16 @@ footer {
     padding: 10px 0;
     margin-top: 20px;
 }
+.contato{
+    margin: 20px;
+}
+nav a:hover {
+    color: blue;
+    text-decoration: underline;
+}
 </style>
 <body>
     <header>
-        <img src="logo.png" alt="Logo do Grêmio">
         <h1>Grêmio Estudantil</h1>
     </header>
     <nav>
@@ -95,10 +101,22 @@ footer {
         <p>Entre em contato</p>
     </div>
     <br></br>
-    <h3>Telefone:</h3>
+    <div class="contato">
+    <h3>Telefone da Escola:</h3>
     <p>(11) 00000-0000</p>
+    <h3>Telefone do Grêmio:</h3>
+    <p>(11) 00000-0000</p>
+    <h3>Instagram da Escola:</h3>
+    <p>@peipagiossi</p>
+    <h3>Instagram do Grêmio:</h3>
+    <p>@gremiopeipagiossi</p>
     <h3>Gmail:</h3>
     <p>GremioPeiPagiossi@gmail.com</p>
+    <h3>Endereço:</h3>
+    <p>R. Barretos, s/n - Jardim America II, Várzea Paulista - SP, 13221-340</p>
+    <a href="https://maps.app.goo.gl/Pizqo8GQwsBZWmtj8">Clique aqui</a>
+    <br></br>
+    </div>
     <footer>
         <p>&copy; 2024 Grêmio Estudantil - Todos os direitos reservados.</p>
     </footer>
