--- a/contato.html
+++ b/contato.html
@@ -109,7 +109,8 @@ nav a:hover {
     <h3>Instagram da Escola:</h3>
     <p>@peipagiossi</p>
     <h3>Instagram do Grêmio:</h3>
-    <p>@gremiopeipagiossi</p>
+    <p></p>
+    <a href="https://www.instagram.com/peipagiossi/">@gremiopeipagiossi</a>
     <h3>Gmail:</h3>
     <p>GremioPeiPagiossi@gmail.com</p>
     <h3>Endereço:</h3>
