--- a/login.html
+++ b/login.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <style>
-        /* Estilos simples para a página de login */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -67,33 +66,42 @@
         </select>
         </div>
         <input type="password" id="password" placeholder="Senha" style="width: 360px;" required><br></br>
-        <button type="submit" style="width: 117px;background-color: #325794;">Entrar</button><br></br>
+        <button type="submit" style="width: 117px;background-color: #325794;" id="ra">Entrar</button><br></br>
         <button type="submit" style="width: 117px;border: 4px; color: #325794; background-color: #FFFFFF; ">Voltar</button>
     </form>
     <p id="error-message" style="color: red; display: none;">Usuário ou senha incorretos</p>
 </div>
 
 <script>
+    function login(){
+        const username = document.getElementById('ra').value;
+        localStorage.setItem('ra', username);
+        window.location.href = 'forum.html';
+    }
     function login(event) {
         event.preventDefault();
         const username = document.getElementById('ra').value;
+        localStorage.setItem('ra', username); // Armazena o username no localStorage
+        window.location.href = 'home.html'; // Redireciona para outra página
         const password = document.getElementById('password').value;
 
         const users = [
-        { username: "usuario1", password: "1234" },
-        { username: "usuario2", password: "abcd" },
+        { username: "Luiz", password: "1234" },
+        { username: "luiz", password: "1234" },
+        { username: "Gabi", password: "Pietro03" },
+        { username: "gabi", password: "pietro03" },
+        { username: "Alessandra", password: "1234" },
+        { username: "alessandra", password: "1234" },
         { username: "admin", password: "admin123" }
     ];
 
     const validUser = users.find(user => user.username === username && user.password === password);
     if (validUser) {
-        // Redireciona para a página "home.html"
         window.location.href = "home.html";
     } else {
         document.getElementById('error-message').style.display = 'block';
     }
 }
 </script>
-
 </body>
 </html>
