--- a/projetos.html
+++ b/projetos.html
@@ -124,7 +124,7 @@ nav a:hover {
         Interclasse duas vezes ao ano com atividades esportivas de vôlei e futboll
     </p><br></br>
     <video controls width="640" height="360" poster="imagem-poster.jpg">
-        <source src="img/WhatsApp Video 2024-11-26 at 8.34.46 PM.mp4" type="video/mp4">
+        <source src="img/video.mp4" type="video/mp4">
         <source src="video.webm" type="video/webm">
         Seu navegador não suporta a reprodução de vídeo.
     </video><br></br>
