--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@ nav a:hover {
         <h1>Grêmio Estudantil</h1>
     </header>
     <nav>
-        <a href="home.html" id="home">Home</a>
+        <a id="home">Home</a>
         <a href="eventos.html">Eventos</a>
         <a href="projetos.html">Projetos</a>
         <a href="destaques.html">Alunos Destaque</a>
@@ -159,7 +159,7 @@ nav a:hover {
         <p>&copy; 2024 Grêmio Estudantil - Todos os direitos reservados.</p>
     </footer>
     <script>
-         // Obtém todas as caixas com a classe "redirect-box"
+   // Obtém todas as caixas com a classe "redirect-box"
 const redirectBoxes = document.querySelectorAll('.redirect-box');
 
 // Adiciona um evento de clique a cada caixa
@@ -172,24 +172,40 @@ redirectBoxes.forEach(box => {
         }
     });
 });
+
+// Recupera o nome do usuário armazenado no localStorage
 let nome = localStorage.getItem('ra');
-        document.addEventListener('DOMContentLoaded', () => {
-  const username = localStorage.getItem('ra'); // Recupera o username
+
+// Aguarda o carregamento completo do DOM
+document.addEventListener('DOMContentLoaded', () => {
+    if (nome) {
+        // Recupera o último usuário que viu o alerta
+        const ultimoUsuario = localStorage.getItem('ultimoUsuario');
+
+        // Exibe o alerta se for um usuário diferente
+        if (nome !== ultimoUsuario) {
+            showAlert('Bem-vindo(a), ' + nome + '!');
+            localStorage.setItem('ultimoUsuario', nome); // Atualiza o último usuário
+        }
+    } else {
+        console.warn('Nenhum nome de usuário encontrado no localStorage.');
+    }
 });
+
+// Função para exibir o alerta personalizado
 function showAlert(message) {
-  // Define a mensagem
-  document.getElementById('alertMessage').textContent = message;
-  // Exibe o alerta
-  document.getElementById('customAlert').style.display = 'flex';
+    // Define a mensagem
+    document.getElementById('alertMessage').textContent = message;
+    // Exibe o alerta
+    document.getElementById('customAlert').style.display = 'flex';
 }
 
+// Função para fechar o alerta
 function closeAlert() {
-  // Oculta o alerta
-  document.getElementById('customAlert').style.display = 'none';
+    // Oculta o alerta
+    document.getElementById('customAlert').style.display = 'none';
 }
 
-// Exemplo de uso
-showAlert('Bem-vindo(a), '+ nome + '!');
     </script>
 </body>
 </html>
